syntax = "proto3";

package feedpb;

import "google/protobuf/timestamp.proto";

service FeedService{
    rpc GetFeed(UserId) returns (FeedMessage) {}
}

message UserId{
    uint64 userId = 1;
}

message AccountInformation{
    string firstName  = 1;
    string lastName = 2;
    string email = 3 ;
    uint64 userId  = 4;
}

message Post{
    uint64 postID = 1;
    google.protobuf.Timestamp timestamp = 2;
    string message = 3;
    AccountInformation author = 4;
}

message FeedMessage{
    repeated Post posts = 1;
}